# view-dependent-rendering-coursework

./: CMakeLists.txt  README.md
models/: bigguy.bmf  killeroo.bmf  teapot.bmf
share/models/: killeroo_nurbs.bmf
share/shaders/: BezierPatchFragmentShader.glsl  BezierPatchVertexShader.glsl
src/: AABB.h  Application.cpp  Application.h  BezierPatch.cpp  BezierPatch.h  Camera.cpp  Camera.h  ConsoleWriter.cpp  ConsoleWriter.h  CudaGLBuffer.cu  CudaGLBuffer.cuh  DecisionBits.h  GpuStackAllocator.h  Input.cpp  Input.h  LibResources.cpp  LibResources.h  Log.cpp  Log.h  Nurbs.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  StackAllocator.cpp  StackAllocator.h  SystemManager.cpp  SystemManager.h  Timer.cpp  Timer.h  ViewDependentRender.cu  ViewDependentRender.h  Window.cpp  Window.h  bothInclude.cu  bothInclude.h  directory.cpp  directory.h  dirent.h  main.cpp  (+2 more)
src/dirent/: dirent_unix.h
